# sso

./: Cargo.toml  README.md
oidc/: Cargo.toml
oidc/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs
