[package]
name = "server"
version = "0.1.0"
edition.workspace = true

[dependencies]
axum = { workspace = true }
http = "1.2.0"
serde = { version = "1.0.216", features = ["derive"] }
tokio = { version = "1.42.0" , features = ["rt-multi-thread"] }
tracing-subscriber = "0.3.19"
oidc = {workspace = true}
